Atualizado exercicio2 e inserida imagem na pasta img

--- a/public/pages/exercicio2.html
+++ b/public/pages/exercicio2.html
@@ -7,6 +7,7 @@
     <title>exercicio2</title>
 </head>
 <body>
-    
+     <a href="https://pt.wikipedia.org/wiki/Transformers_(s%C3%A9rie_de_filmes)" >
+      <img src="./img/images (2).jpg" alt="Transformers" >  
 </body>
 </html>
