updade landing page

--- a/land page/land-page.html
+++ b/land page/land-page.html
@@ -11,32 +11,15 @@
 
 <body>
     <div class="container">
-        <div class="checkbox-container">
-            <div class="checkbox-menu">
-                <input type="checkbox" id="toggle">
-                <label class="checkbox" for="toggle">
-                    <div class="trace"></div>
-                    <div class="trace"></div>
-                    <div class="trace"></div>
-                </label>
-                <div class="menu">
-                    <nav class="menu-itens">
-                        <ul>
-                            <li><a href="#">HOME</a>></li>
-                            <li><a href="#">SOBRE</a>></li>
-                            <li><a href="#">PROJETOS</a>></li>
-                        </ul>
-                    </nav>
-
-                </div>
-
-            </div>
+            
             <div classe="name">
                 <h1>TIAGO DE LIMA AMARAL</h1>
                 <h3>FULL-STACK DEVELOPER</h3>
                 <div class="social-media">
                     <a class="botton" href="https://www.linkedin.com/in/tiago-amaral-820411112/">LINKEDIN</a>
                     <a class="botton" href="https://github.com/Tiago-Amaral">GITHUB</a>
+                    <a class="botton" href="https://github.com/Tiago-Amaral">SOBRE</a>
+                    <a class="botton" href="https://github.com/Tiago-Amaral">PROJETOS</a>
                 </div>
                 
             </div>
